--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,9 @@
 {
 	"scripts": {
 		"dev": "ts-node-dev src/app.ts",
-		"typeorm": "typeorm-ts-node-commonjs"
+		"typeorm": "typeorm-ts-node-commonjs",
+		"migration:generate": "typeorm-ts-node-commonjs migration:generate",
+		"migration:run": "typeorm-ts-node-commonjs migration:run -d src/data-source.ts"
 	},
 	"devDependencies": {
 		"@types/express": "^4.17.21",
