--- a/backend/package.json
+++ b/backend/package.json
@@ -1,4 +1,7 @@
 {
+	"name": "backend",
+	"version": "1.0.0",
+	"description": "",
 	"scripts": {
 		"dev": "ts-node-dev src/app.ts",
 		"typeorm": "typeorm-ts-node-commonjs",
