--- a/backend/package.json
+++ b/backend/package.json
@@ -9,12 +9,14 @@
 		"migration:run": "typeorm-ts-node-commonjs migration:run -d src/data-source.ts"
 	},
 	"devDependencies": {
+		"@types/bcrypt": "^5.0.2",
 		"@types/express": "^4.17.21",
 		"@types/node": "^20.11.5",
 		"ts-node-dev": "^2.0.0",
 		"typescript": "^5.3.3"
 	},
 	"dependencies": {
+		"bcrypt": "^5.1.1",
 		"express": "^4.18.2",
 		"express-async-errors": "^3.1.1",
 		"pg": "^8.11.3",
