--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
 	"devDependencies": {
 		"@types/bcrypt": "^5.0.2",
 		"@types/express": "^4.17.21",
+		"@types/jsonwebtoken": "^9.0.5",
 		"@types/node": "^20.11.5",
 		"ts-node-dev": "^2.0.0",
 		"typescript": "^5.3.3"
@@ -19,6 +20,7 @@
 		"bcrypt": "^5.1.1",
 		"express": "^4.18.2",
 		"express-async-errors": "^3.1.1",
+		"jsonwebtoken": "^9.0.2",
 		"pg": "^8.11.3",
 		"reflect-metadata": "^0.2.1",
 		"typeorm": "^0.3.19"
