--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.0",
     "express": "^4.18.2",
-    "helmet": "^7.1.0"
+    "helmet": "^7.1.0",
+    "mongoose": "^8.1.0"
   }
 }
