feat: :sparkles: create struture rest property (Model, Dto, Interface, Service, Controler, Router) and create validateDto

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -2,6 +2,9 @@
     "compilerOptions": {
       "target": "es6",
       "module": "commonjs",
+      "emitDecoratorMetadata": true,
+      "experimentalDecorators": true,
+      "strictNullChecks": false,
       "rootDir": "./src",
       "outDir": "./dist",
       "esModuleInterop": true,
