--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
     "dotenv": "^16.4.0",
     "express": "^4.18.2",
     "helmet": "^7.1.0",
-    "mongoose": "^8.1.0"
+    "mongoose": "^8.1.0",
+    "reflect-metadata": "^0.2.1"
   }
 }
