--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,8 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/helmet": "^4.0.0",
+    "@types/js-yaml": "^4.0.9",
+    "@types/swagger-ui-express": "^4.1.6",
     "@typescript-eslint/eslint-plugin": "^6.19.1",
     "@typescript-eslint/parser": "^6.19.1",
     "eslint": "^8.56.0",
@@ -30,7 +32,9 @@
     "dotenv": "^16.4.0",
     "express": "^4.18.2",
     "helmet": "^7.1.0",
+    "js-yaml": "^4.1.0",
     "mongoose": "^8.1.0",
-    "reflect-metadata": "^0.2.1"
+    "reflect-metadata": "^0.2.1",
+    "swagger-ui-express": "^5.0.0"
   }
 }
