feat: add the zod

--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
 		"jsonwebtoken": "^9.0.2",
 		"pg": "^8.11.3",
 		"reflect-metadata": "^0.2.1",
-		"typeorm": "^0.3.19"
+		"typeorm": "^0.3.19",
+		"zod": "^3.22.4"
 	}
 }
