--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,9 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@fontsource/poppins": "^5.0.8",
+    "@hookform/resolvers": "^3.3.4",
+    "@mui/icons-material": "^5.15.6",
+    "@mui/lab": "5.0.0-alpha.162",
     "@mui/material": "^5.15.6",
     "@tanstack/react-query": "^5.17.19",
     "react": "^18.2.0",
