--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@mui/lab": "5.0.0-alpha.162",
     "@mui/material": "^5.15.6",
     "@tanstack/react-query": "^5.17.19",
+    "axios": "^1.6.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
