--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
 	},
 	"devDependencies": {
 		"@types/bcrypt": "^5.0.2",
+		"@types/cors": "^2.8.17",
 		"@types/express": "^4.17.21",
 		"@types/jsonwebtoken": "^9.0.5",
 		"@types/node": "^20.11.5",
@@ -18,6 +19,7 @@
 	},
 	"dependencies": {
 		"bcrypt": "^5.1.1",
+		"cors": "^2.8.5",
 		"express": "^4.18.2",
 		"express-async-errors": "^3.1.1",
 		"jsonwebtoken": "^9.0.2",
