ci: add anonymous volume to node_modules

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,7 @@ services:
         condition: service_healthy
     volumes:
       - ./backend:/app
+      - /app/node_modules
 
   frontend:
     container_name: frontend_imovel_status
@@ -38,6 +39,7 @@ services:
       - backend
     volumes:
       - ./frontend:/app
+      - /app/node_modules
 
 volumes:
   pgdata:
