--- a/backend/.vscode/settings.json
+++ b/backend/.vscode/settings.json
@@ -3,5 +3,6 @@
     "*.module.ts": "nest-module",
     "*.service.ts": "nest-service",
     "*.controller.ts": "nest-controller"
-  }
+  },
+  "conventionalCommits.scopes": ["domain"]
 }
