--- a/backend/.vscode/settings.json
+++ b/backend/.vscode/settings.json
@@ -4,5 +4,5 @@
     "*.service.ts": "nest-service",
     "*.controller.ts": "nest-controller"
   },
-  "conventionalCommits.scopes": ["domain", "database", "application"]
+  "conventionalCommits.scopes": ["domain", "database", "application", "infra"]
 }
