test(test): :test_tube: created test files
test files not complete

--- a/backend/.vscode/settings.json
+++ b/backend/.vscode/settings.json
@@ -4,5 +4,11 @@
     "*.service.ts": "nest-service",
     "*.controller.ts": "nest-controller"
   },
-  "conventionalCommits.scopes": ["domain", "database", "application", "infra"]
+  "conventionalCommits.scopes": [
+    "domain",
+    "database",
+    "application",
+    "infra",
+    "test"
+  ]
 }
