test(test): :white_check_mark: Validated tests
fineshed test configuration and validated them

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -26,7 +26,7 @@
       "@application/*": ["src/application/*"],
       "@domain/*": ["./src/domain/*"],
       "@infra/*": ["./src/infra/*"],
-      "@test/*": ["./test/*"],
-    },
-  },
+      "@test/*": ["./test/*"]
+    }
+  }
 }
