--- a/backend/package.json
+++ b/backend/package.json
@@ -32,7 +32,6 @@
     "test:e2e": "jest --config ./test/jest-e2e.config.ts"
   },
   "dependencies": {
-    "@faker-js/faker": "8.4.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "3.1.1",
     "@nestjs/core": "^10.0.0",
@@ -40,8 +39,7 @@
     "@nestjs/mongoose": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-fastify": "10.3.1",
-    "@prisma/client": "5.8.1",
-    "casual": "1.6.2",
+    "@prisma/client": "5.9.1",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
     "dotenv": "16.4.1",
@@ -55,9 +53,11 @@
     "uuid": "9.0.1"
   },
   "devDependencies": {
+    "@faker-js/faker": "8.4.0",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@swc/jest": "0.2.36",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
@@ -65,15 +65,16 @@
     "@types/uuid": "9.0.8",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
-    "eslint": "^8.42.0",
+    "eslint": "8.56.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import-helpers": "1.3.1",
+    "eslint-plugin-jest-extended": "2.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-unused-imports": "3.0.0",
-    "faker": "5.5.3",
     "jest": "^29.5.0",
+    "jest-extended": "4.0.2",
     "prettier": "^3.0.0",
-    "prisma": "5.8.1",
+    "prisma": "5.9.1",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
