--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,20 +18,38 @@
     "@mantine/form": "^7.5.2",
     "@mantine/hooks": "^7.5.2",
     "@mantine/modals": "^7.5.2",
+    "@mantine/notifications": "^7.5.3",
+    "mantine-form-zod-resolver": "^1.1.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "swr": "^2.2.4"
+    "react-imask": "^7.4.0",
+    "swr": "^2.2.4",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@typescript-eslint/eslint-plugin": "^5.41.0",
+    "@typescript-eslint/parser": "^5.41.0",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-n": "^15.3.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.31.10",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-simple-import-sort": "^8.0.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "postcss": "^8.4.35",
     "postcss-preset-mantine": "^1.13.0",
     "postcss-simple-vars": "^7.0.1",
+    "prettier": "^2.7.1",
     "typescript": "^5"
   }
 }
