feat(frontend): :sparkles: added ability to desactivate estates

--- a/frontend/.vscode/settings.json
+++ b/frontend/.vscode/settings.json
@@ -5,5 +5,8 @@
     "**/*.sass",
     "**/*.less",
     "node_modules/@mantine/core/styles.css"
+  ],
+  "conventionalCommits.scopes": [
+    "frontend"
   ]
 }
